--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,5 @@
 .navbar-lewagon {
+  display: flex;
   justify-content: space-between;
   background: white;
   height: 50px;
@@ -13,4 +14,10 @@
 }
  .logo {
   height: 50px;
+ }
+
+ .nav-links {
+  display: flex;
+  align-items: center;
+  padding: 7px;
  }
